--- a/index.css
+++ b/index.css
@@ -31,17 +31,21 @@ body {
 
 #nav-bar {
     width: 100%;
-    max-height: 10.2vh;
+    min-height: 9vh;
     box-sizing: border-box;
     background-color: var(--dark-transparent);
     backdrop-filter: blur(5px);
     display: grid;
     grid-template-columns: 1fr 1.5fr;
     grid-template-rows: 1fr;
-    padding: 0.66rem 5rem;
+    padding: 0 5rem;
     position: fixed;
     top: 0;
     left: 0;
+}
+
+#nav-bar-logo {
+    align-self: center;
 }
 
 #nav-links-and-buttons {
@@ -51,23 +55,37 @@ body {
 }
 
 #nav-links-and-buttons li {
+    height: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    position: relative;
+}
+
+#signup,
+#login {
+    height: 60% !important;
 }
 
 #nav-links-and-buttons a {
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-decoration: none;
     color: var(--white);
     text-align: center;
     opacity: 0.87;
-    font-weight: 700;
-    letter-spacing: 0.3px;
+    font-weight: 600;
+    letter-spacing: 0px;
+    margin-right: 15px;
 }
 
 .fa-angle-down {
     font-size: 13px;
+    position: absolute;
+    top: 45%;
+    right: 0;
 }
 
 #nav-links-and-buttons a:hover {
@@ -86,24 +104,29 @@ body {
     position: relative;
 }
 
-#investments:hover #investments-options{
-    display: block;
-}
-
-#investments:hover #investments-options {
-    display: block;
-}
-
 #investments #investments-options {
     width: 50vw;
     position: absolute;
-    left: -150%;
-    top: 150%;
+    left: -250%;
+    top: 100%;
     background-color: var(--white);
     border-radius: 6px;
     box-sizing: border-box;
     padding: 1.8rem 2.1rem;
     display: none;
+}
+
+#investments #investments-options:before {
+    position: absolute;
+    top: -52px;
+    left: 30%;
+    content: "";
+    width: 0;
+    height: 0;
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    border-bottom: 21px solid var(--white);
+    margin: 2rem;
 }
 
 #investments #investments-options #investments-options-contents {
@@ -125,6 +148,65 @@ body {
     background-color: var(--dark-transparent2);
     box-sizing: border-box;
     padding: 0.3rem 1rem;
+}
+
+#investments:hover #investments-options {
+    display: block;
+    height: auto;
+}
+
+#products {
+    position: relative;
+}
+
+#products #products-options {
+    width: 50vw;
+    position: absolute;
+    left: -250%;
+    top: 100%;
+    background-color: var(--white);
+    border-radius: 6px;
+    box-sizing: border-box;
+    padding: 1.8rem 2.1rem;
+    display: none;
+}
+
+#products #products-options:before {
+    position: absolute;
+    top: -52px;
+    left: 24%;
+    content: "";
+    width: 0;
+    height: 0;
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    border-bottom: 21px solid var(--white);
+    margin: 2rem;
+}
+
+#products #products-options #products-options-contents {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    gap: 9px;
+}
+
+#products #products-options #products-options-contents li {
+    box-sizing: border-box;
+    padding: 0.3rem 1rem;
+    border-radius: 3px;
+}
+
+#products #products-options #products-options-contents li:hover {
+    cursor: pointer;
+    background-color: var(--dark-transparent2);
+    box-sizing: border-box;
+    padding: 0.3rem 1rem;
+}
+
+#products:hover #products-options {
+    display: block;
 }
 
 #nav-links-and-buttons #nav-bar-links,
@@ -171,3 +253,4 @@ body {
     color: var(--white) !important;
     background: linear-gradient(to top, var(--indigo), #873cff);
 }
+
